force-app/main/default/objects/DC_Circuit_Breaker__c/DC_Circuit_Breaker__c.object-meta.xml
<CustomObject>
    <label>Circuit Breaker</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Circuit Breakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>