force-app/main/default/objects/DC_Circuit_Breaker__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Asset allocated to this Circuit Breaker.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Circuit Breakers</relationshipLabel>
    <relationshipName>Circuit_Breakers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>