force-app/main/default/objects/DC_Circuit_Breaker__c/fields/Associated_Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Associated_Space_Type__c</fullName>
    <description>Default Value of Cabinet</description>
    <label>Associated Space Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabinet</fullName>
            </value>
            <value>
                <fullName>Rack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>