force-app/main/default/objects/DC_Circuit_Breaker__c/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Cabinet this Circuit Breaker is connected to.</description>
    <label>Cabinet</label>
    <referenceTo>DC_Cabinet__c</referenceTo>
    <relationshipLabel>Circuit Breakers</relationshipLabel>
    <relationshipName>Circuit_Breakers</relationshipName>
    <type>Lookup</type>
</CustomField>