force-app/main/default/objects/DC_Circuit_Breaker__c/fields/Connected_Power__c.field-meta.xml
<CustomField>
    <fullName>Connected_Power__c</fullName>
    <formula>IF( ISPICKVAL( Phase__c , &apos;1P&apos;), ( CASE(Amperage__c,
    &quot;20&quot;,20,
    &quot;30&quot;,30,
    &quot;60&quot;,60,
    0) * CASE( Voltage__c ,
    &quot;120&quot;,120,
    &quot;208&quot;,208,
    0) * 0.8 ) /1000,  ( CASE(Amperage__c,
    &quot;20&quot;,20,
    &quot;30&quot;,30,
    &quot;60&quot;,60,
    0) * CASE(Voltage__c,
    &quot;120&quot;,120,
    &quot;208&quot;,208,
    0) * 0.8 * SQRT(3) ) /1000 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Power</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>