force-app/main/default/objects/DC_Circuit_Breaker__c/fields/PDU_Panel__c.field-meta.xml
<CustomField>
    <fullName>PDU_Panel__c</fullName>
    <label>PDU Panel</label>
    <referenceTo>DC_PDU_Panel__c</referenceTo>
    <relationshipLabel>Circuit Breakers</relationshipLabel>
    <relationshipName>Circuit_Breakers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>