force-app/main/default/objects/DC_Circuit_Breaker__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Phase of circuit.</description>
    <label>Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1P</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>