force-app/main/default/objects/DC_Circuit_Breaker__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Rack this Circuit Breaker is connected to.</description>
    <label>Rack</label>
    <referenceTo>DC_Rack__c</referenceTo>
    <relationshipLabel>Circuit Breakers</relationshipLabel>
    <relationshipName>Circuit_Breakers</relationshipName>
    <type>Lookup</type>
</CustomField>