force-app/main/default/objects/DC_Circuit_Breaker__c/fields/Related_MRI_Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_MRI_Suite_ID__c</fullName>
    <formula>If(NOT(ISBLANK( Cabinet__c )),  Cabinet__r.MRI_Suite_ID__c ,  Rack__r.MRI_Suite_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related MRI Suite ID</label>
    <type>Text</type>
</CustomField>