force-app/main/default/objects/DC_Circuit_Breaker__c/fields/Voltage__c.field-meta.xml
<CustomField>
    <fullName>Voltage__c</fullName>
    <description>Voltage rating of this circuit</description>
    <label>Voltage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>208</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>